# xf86-video-geode

./: .gitignore  .gitlab-ci.yml  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  libtool
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-code-cleanup.yml  04-doc-update.yml  05-org-task.yml
build-aux/: .gitignore
m4/: .gitignore
man/: Makefile.am  Makefile.in  amd.man
src/: Makefile.am  Makefile.in  amd.4.html  amd.h  amd_common.c  amd_dcon.c  amd_driver.c  amd_fourcc.h  amd_gx_accel.c  amd_gx_cursor.c  amd_gx_dcon.c  amd_gx_dga.c  amd_gx_driver.c  amd_gx_randr.c  amd_gx_regacc.c  amd_gx_rotate.c  amd_gx_shadow.c  amd_gx_vga.c  amd_gx_video.c  amd_lx_accel.c  amd_lx_cursor.c  amd_lx_dga.c  amd_lx_driver.c  amd_lx_exa.c  amd_lx_randr.c  amd_lx_regacc.c  amd_lx_rotate.c  amd_lx_shadow.c  amd_lx_vga.c  amd_lx_video.c  amd_msr.c  build_num.h  cim_dev.h  cimarron.c  compat-api.h  durango.c  geode.h  geode_common.c  geode_dcon.c  geode_ddc.c  (+26 more)
src/cim/: cim_defs.h  cim_defs.h.rej  cim_df.c  cim_gp.c  cim_init.c  cim_modes.c  cim_msr.c  cim_rtns.h  cim_vg.c  cim_vip.c  cim_vop.c
src/gfx/: disp_gu1.c  disp_gu2.c  disp_gu3.c  durango.c  gfx_defs.h  gfx_disp.c  gfx_init.c  gfx_msr.c  gfx_regs.h  gfx_rtns.h  gfx_type.h  gfx_vid.c  init_gu3.c  msr_rdcl.c  rndr_gu2.c  vid_cstl.c  vid_rdcl.c
src/panel/: cen9211.c  panel.c  platform.c
ztv/: Makefile.am
